--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "twilio": "^4.12.0"
+    "twilio": "^4.12.0",
+    "nodemon": "^2.0.22"
   }
 }
