--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-file-system": "~15.2.2",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
@@ -23,9 +24,12 @@
     "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-linear-gradient": "^2.8.1",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
