--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "twilio": "^4.12.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "twilio": "^4.12.0"
   }
 }
